--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
 </div>
 
-<div style="display: flex;justify-content: center;">
+<div class="formDiv">
  <h1 style="color: coral;">Assignment submission</h1>
   </div>
 
@@ -52,7 +52,7 @@
 <input type="submit" style="margin: 1rem;background-color: black;color: white; padding: 7px;border-radius: 8px;">
 </form>
 <div id="image" style="display: flex;justify-content: center;">
-<img style="border-radius: 8px;border-top: 6px solid brown;border-right: 6px solid green;border-left: 6px solid yellow;border-bottom: 4px solid blue;" src="https://picsum.photos/300/200"  alt="imggg">
+<img class="borderImg" src="https://picsum.photos/300/200"  alt="imggg">
 </div>
 
 
