border radius update

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
 <img class="borderImg" src="https://picsum.photos/300/200"  alt="imggg">
 </div>
 
+<div class="container">
+  <h1>Isctructions</h1>
+  <ul>
+    <li>Should not exceed 3MB</li>
+    <li>Should not contain any special characters</li>
+    <li>Should be only in pdf,jpg,png format</li>
+    <li>submission last date - 18/08/2022</li>
+  </ul>
+</div>
 
 
 </body>
